# kekoa-systems

./: CLAUDE.md  README.md  pyproject.toml
docs/research/: LatticeOS_for_Federated_Learning_Satellites.md
docs/strategy/: KEKOA GTM & Business Model Strategy.md  master_prd.md
docs/technical/: Deep Dive_ KEKOA & Orbital Availability.md  horizon_1.md
docs/technical/guides/: ai_systems_design_guide.md  ml_systems_design_guide.md  systems_design_guide.md
src/kekoa/: __init__.py
src/kekoa/config/: __init__.py  settings.py
src/kekoa/core/: __init__.py  errors.py  ports.py  resilience.py  types.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/core/: test_errors.py  test_resilience.py  test_types.py
