[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kekoa"
version = "0.1.0"
description = "Knowledge Extraction Kernel for Operational Automation - Deterministic federated learning for LEO satellite constellations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "KEKOA Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    # Orbital mechanics
    "sgp4>=2.22",
    "skyfield>=1.46",
    "numpy>=1.24",
    # ML/FL
    "torch>=2.0",
    # Communication
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.92",
    "mypy>=1.8",
    "ruff>=0.1.9",
    "pre-commit>=3.6",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
kekoa = "kekoa.adapters.inbound.cli:main"

[project.urls]
Homepage = "https://github.com/kekoa-systems/kekoa"
Documentation = "https://kekoa-systems.github.io/kekoa"
Repository = "https://github.com/kekoa-systems/kekoa"

[tool.hatch.build.targets.wheel]
packages = ["src/kekoa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "-ra",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "property: marks tests as property-based tests",
    "metamorphic: marks tests as metamorphic tests",
]

[tool.coverage.run]
source = ["src/kekoa"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "sgp4.*",
    "skyfield.*",
    "torch.*",
    "grpc.*",
    "google.protobuf.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["kekoa"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001", "S101"]
